--- a/package.json
+++ b/package.json
@@ -1,10 +1,24 @@
 {
+  "name": "nodejsapp",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "start": "nodemon server.js"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
-    "face-api.js": "^0.22.2",
-    "mongoose": "^8.3.0",
+    "face-api.js": "^0.20.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.2",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.0",
     "path": "^0.12.7"
   }
 }
