--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "face-api.js": "^0.20.0",
+    "firebase": "^10.11.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
