--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "face-api.js": "^0.20.0",
@@ -21,6 +22,7 @@
     "mongoose": "^8.3.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "razorpay": "^2.9.3"
   }
 }
